Reduced font-size for calendar events to prevent overflow on smaller screens

--- a/platypush/backend/http/static/css/source/dashboard/widgets/calendar/index.scss
+++ b/platypush/backend/http/static/css/source/dashboard/widgets/calendar/index.scss
@@ -3,6 +3,10 @@
 .widget .calendar {
     padding: 1rem;
 
+    .event {
+        font-size: .8em;
+    }
+
     .upcoming-event {
         text-align: center;
         margin-bottom: 1.5rem;
